feat(detail): add API to get post and activity by id
